<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context="com.example.www.bruckquiz.MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:onClick="getUserAnswers"
        app:elevation="6dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/haken" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/CardLinearLayout">

            <android.support.v7.widget.CardView
                android:id="@+id/cardQuestion1"
                style="@style/CardLayout">

                <LinearLayout style="@style/CardLinearLayout">

                    <ImageView
                        style="@style/CardImageView"
                        android:src="@drawable/bruckharfe" />

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/title1" />

                    <TextView
                        style="@style/CardSubtitle"
                        android:text="@string/subtitle1" />

                    <TextView
                        style="@style/CardDescription"
                        android:text="@string/description1" />

                    <RadioGroup
                        android:id="@+id/radioGroupQuestion1"
                        style="@style/CardRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButtonQuestion1a"
                            style="@style/CardRadioButton"
                            android:text="@string/answer1a" />

                        <RadioButton
                            android:id="@+id/radioButtonQuestion1b"
                            style="@style/CardRadioButton"
                            android:text="@string/answer1b" />

                        <RadioButton
                            android:id="@+id/radioButtonQuestion1c"
                            style="@style/CardRadioButton"
                            android:text="@string/answer1c" />

                        <RadioButton
                            android:id="@+id/radioButtonQuestion1d"
                            style="@style/CardRadioButton"
                            android:text="@string/answer1d" />
                    </RadioGroup>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardQuestion2"
                style="@style/CardLayout">

                <LinearLayout style="@style/CardLinearLayout">

                    <ImageView
                        style="@style/CardImageView"
                        android:src="@drawable/vip" />

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/title2" />

                    <TextView
                        style="@style/CardSubtitle"
                        android:text="@string/subtitle2" />

                    <TextView
                        style="@style/CardDescription"
                        android:text="@string/description2" />

                    <RadioGroup
                        android:id="@+id/radioGroupQuestion2"
                        style="@style/CardRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButtonQuestion2a"
                            style="@style/CardRadioButton"
                            android:text="@string/answer2a" />

                        <RadioButton
                            android:id="@+id/radioButtonQuestion2b"
                            style="@style/CardRadioButton"
                            android:text="@string/answer2b" />

                        <RadioButton
                            android:id="@+id/radioButtonQuestion2c"
                            style="@style/CardRadioButton"
                            android:text="@string/answer2c" />

                        <RadioButton
                            android:id="@+id/radioButtonQuestion2d"
                            style="@style/CardRadioButton"
                            android:text="@string/answer2d" />
                    </RadioGroup>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardQuestion3"
                style="@style/CardLayout">

                <LinearLayout style="@style/CardLinearLayout">

                    <ImageView
                        style="@style/CardImageView"
                        android:src="@drawable/bruck1684" />

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/title3" />

                    <TextView
                        style="@style/CardSubtitle"
                        android:text="@string/subtitle3" />

                    <TextView
                        style="@style/CardDescription"
                        android:text="@string/description3" />

                    <EditText
                        android:id="@+id/TextQuestion3"
                        style="@style/CardTextInput"
                        android:hint="@string/hint3"
                        android:inputType="number" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardQuestion4"
                style="@style/CardLayout">

                <LinearLayout style="@style/CardLinearLayout">

                    <ImageView
                        style="@style/CardImageView"
                        android:src="@drawable/hauptplatz" />

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/title4" />

                    <TextView
                        style="@style/CardSubtitle"
                        android:text="@string/subtitle4" />

                    <TextView
                        style="@style/CardDescription"
                        android:text="@string/description4" />

                    <LinearLayout
                        style="@style/CardCheckboxLayout"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbQuestion4a"
                            style="@style/CardCheckbox"
                            android:text="@string/answer4a" />

                        <CheckBox
                            android:id="@+id/cbQuestion4b"
                            style="@style/CardCheckbox"
                            android:text="@string/answer4b" />

                        <CheckBox
                            android:id="@+id/cbQuestion4c"
                            style="@style/CardCheckbox"
                            android:text="@string/answer4c" />

                        <CheckBox
                            android:id="@+id/cbQuestion4d"
                            style="@style/CardCheckbox"
                            android:text="@string/answer4d" />

                        <CheckBox
                            android:id="@+id/cbQuestion4e"
                            style="@style/CardCheckbox"
                            android:text="@string/answer4e" />

                        <CheckBox
                            android:id="@+id/cbQuestion4f"
                            style="@style/CardCheckbox"
                            android:text="@string/answer4f" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardQuestion5"
                style="@style/CardLayout">

                <LinearLayout style="@style/CardLinearLayout">

                    <ImageView
                        style="@style/CardImageView"
                        android:src="@drawable/fusion" />

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/title5" />

                    <TextView
                        style="@style/CardSubtitle"
                        android:text="@string/subtitle5" />

                    <TextView
                        style="@style/CardDescription"
                        android:text="@string/description5" />

                    <EditText
                        android:id="@+id/TextQuestion5"
                        style="@style/CardTextInput"
                        android:hint="@string/hint5" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardQuestion6"
                style="@style/CardLayout">

                <LinearLayout style="@style/CardLinearLayout">

                    <ImageView
                        style="@style/CardImageView"
                        android:src="@drawable/wappen" />

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/title6" />

                    <TextView
                        style="@style/CardSubtitle"
                        android:text="@string/subtitle6" />

                    <TextView
                        style="@style/CardDescription"
                        android:text="@string/description6" />

                    <LinearLayout
                        style="@style/CardCheckboxLayout"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbQuestion6a"
                            style="@style/CardCheckbox"
                            android:text="@string/answer6a" />

                        <CheckBox
                            android:id="@+id/cbQuestion6b"
                            style="@style/CardCheckbox"
                            android:text="@string/answer6b" />

                        <CheckBox
                            android:id="@+id/cbQuestion6c"
                            style="@style/CardCheckbox"
                            android:text="@string/answer6c" />

                        <CheckBox
                            android:id="@+id/cbQuestion6d"
                            style="@style/CardCheckbox"
                            android:text="@string/answer6d" />

                        <CheckBox
                            android:id="@+id/cbQuestion6e"
                            style="@style/CardCheckbox"
                            android:text="@string/answer6e" />

                        <CheckBox
                            android:id="@+id/cbQuestion6f"
                            style="@style/CardCheckbox"
                            android:text="@string/answer6f" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
